setting up mobile nav

--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
           <a href="#">Corporate</a>
         </div>
         <div class="mobile-nav">
-          <input type="checkbox" id="mobile-nav-toggle" name="mobile-nav-toggle" class="mobile-nav__toggle">
-          <label class=".mobile-nav__toggle__label" for="menu-toggle"></label>
-          <ul class="nav nav--mobile">
-            <li class="nav__items nav__items--mobile"><a href="#">Home</a></li>
-            <li class="nav__items nav__items--mobile"><a href="#">Demo</a></li>
-            <li class="nav__items nav__items--mobile"><a href="#">Blog</a></li>
-            <li class="nav__items nav__items--mobile"><a href="#">Pages</a></li>
-            <li class="nav__items nav__items--mobile"><a href="#">About Us</a></li>
+          <input type="checkbox" id="mobile-nav__toggle" name="mobile-nav-toggle" class="mobile-nav__toggle">
+          <label class="mobile-nav__toggle__label" for="mobile-nav-toggle"></label>
+          <ul class="nav--mobile">
+            <li class="nav--mobile__item"><a href="#">Home</a></li>
+            <li class="nav--mobile__item"><a href="#">Demo</a></li>
+            <li class="nav--mobile__item"><a href="#">Blog</a></li>
+            <li class="nav--mobile__item"><a href="#">Pages</a></li>
+            <li class="nav--mobile__item"><a href="#">About Us</a></li>
           </ul>
         </div>
         <!-- <ul class="nav">
