header styling tweaks

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         </div>
         <div class="mobile-nav">
           <input type="checkbox" id="mobile-nav__toggle" name="mobile-nav-toggle" class="mobile-nav__toggle">
-          <label class="mobile-nav__toggle__label" for="mobile-nav-toggle"></label>
+          <label class="mobile-nav__toggle__label" for="mobile-nav__toggle"></label>
           <ul class="nav--mobile">
             <li class="nav--mobile__item"><a href="#">Home</a></li>
             <li class="nav--mobile__item"><a href="#">Demo</a></li>
