finishing learn-more tout section

--- a/index.html
+++ b/index.html
@@ -37,16 +37,22 @@
       </div>
     </nav>
     <div class="header__hero">
-      <div class="wrapper">
+      <div class="wrapper header__hero__wrapper">
         <h1 class="header__hero__heading">Welcome <span class="header__hero__heading--small">to my corporate website</span></h1>
         <a class="button" href="#">Start</a>
       </div>
     </div>
   </header>
 
-  <section class="intro tout--small">
-    <h2 class="tout-heading">Welcome to Corporate</h2>
+  <section class="tout">
+    <div class="wrapper">
+      <h2 class="tout-heading">Welcome to <span class="tout-heading--blue">Corporate</span></h2>
+      <p class="tout-blurb">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum consequatur ab vel a iure quae quibusdam modi expedita reiciendis accusantium?</p>
+      <a href="#" class="button">Know more</a>
+    </div>
   </section>
+
+
   
 </body>
 </html>
