--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </div>
   </header>
 
-  <section class="tout">
+  <section class="tout tout--learn-more">
     <div class="wrapper">
       <h2 class="tout-heading">Welcome to <span class="tout-heading--blue">Corporate</span></h2>
       <p class="tout-blurb">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum consequatur ab vel a iure quae quibusdam modi expedita reiciendis accusantium?</p>
@@ -52,6 +52,30 @@
     </div>
   </section>
 
+  <section class="tout tout--about-us">
+    <div class="half-tile">
+      <h2 class="tout-heading">Why Choose Us?</h2>
+      <div class="half-tile__content">
+        <div class="half-tile__content__image">
+          <img src="assets/image-2.jpeg" alt="">
+        </div>
+        <div class="half-tile__content__text">
+          <h3 class="tout-heading--small">15 Years of experience</h3>
+          <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
+        </div>
+      </div>
+      <div class="half-tile__content">
+        <div class="half-tile__content__image">
+          <img src="assets/image-2.jpeg" alt="">
+        </div>
+        <div class="half-tile__content__text">
+          <h3 class="tout-heading--small">15 Years of experience</h3>
+          <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
+        </div>
+      </div>
+    </div>
+    <div class="half-tile--decorative"></div>
+  </section>
 
   
 </body>
