adding features/about us section

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
    <link href="https://fonts.googleapis.com/css?family=Montserrat:400,600,700|Open+Sans:400,600,700" rel="stylesheet">
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css" integrity="sha384-hWVjflwFxL6sNzntih27bfxkr27PmbbK/iSvJ+a4+0owXq79v+lsFkW54bOGbiDQ" crossorigin="anonymous">
   <link rel="stylesheet" href="styles/styles.css">
   <title>Corporate | Home</title>
 </head>
@@ -66,15 +67,76 @@
       </div>
       <div class="half-tile__content">
         <div class="half-tile__content__image">
-          <img src="assets/image-2.jpeg" alt="">
+          <img src="assets/image-3.jpeg" alt="">
         </div>
         <div class="half-tile__content__text">
-          <h3 class="tout-heading--small">15 Years of experience</h3>
+          <h3 class="tout-heading--small">900+ Happy clients</h3>
           <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
         </div>
       </div>
     </div>
     <div class="half-tile--decorative"></div>
+  </section>
+
+  <section class="tout tout--services">
+    <div class="wrapper">
+      <h2 class="tout-heading">Services</h2>
+      <div class="features">
+        <div class="features__tile">
+          <div class="features__tile__image">
+            <img src="assets/object-group-solid.svg" alt="">
+          </div>
+          <h3 class="features__tile__heading">UX/UI Design</h3>
+          <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
+          <ul class="features__tile__list">
+            <li class="tout-blurb">Lorem, ipsum.</li>
+            <li class="tout-blurb">Lorem, ipsum dolor.</li>
+            <li class="tout-blurb">Lorem, ipsum.</li>
+          </ul>
+        </div>
+        <div class="features__tile">
+          <div class="features__tile__image">
+            <img src="assets/laptop-solid.svg" alt="">
+          </div>
+            <h3 class="features__tile__heading">Programming</h3>
+            <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
+          <ul class="features__tile__list">
+            <li class="tout-blurb">Lorem, ipsum.</li>
+            <li class="tout-blurb">Lorem, ipsum dolor.</li>
+            <li class="tout-blurb">Lorem, ipsum.</li>
+          </ul>
+        </div>
+        <div class="features__tile">
+          <div class="features__tile__image">
+            <img src="assets/chart-line-solid.svg" alt="">
+          </div>
+          <h3 class="features__tile__heading">Analytics</h3>
+          <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
+          <ul class="features__tile__list">
+            <li class="tout-blurb">Lorem, ipsum.</li>
+            <li class="tout-blurb">Lorem, ipsum dolor.</li>
+            <li class="tout-blurb">Lorem, ipsum.</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <section class="tout tout--testimonials">
+    <div class="wrapper">
+      <h2 class="tout-heading">People say about us</h2>
+      <div class="testimonials">
+        <div class="testimonials__image">
+          <img src="assets/image-5.jpeg" alt="">
+        </div>
+        <span class="arrow left"></span>
+        <span class="arrow right"></span>
+        <p class="testimonials__blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
+        cinia aliquet, augue nisi scelerisque velit, vitae ornare lectus lorem nec odio. 
+        Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+      </div>
+
+    </div>
   </section>
 
   
