--- a/index.html
+++ b/index.html
@@ -124,18 +124,66 @@
 
   <section class="tout tout--testimonials">
     <div class="wrapper">
-      <h2 class="tout-heading">People say about us</h2>
+      <h2 class="tout-heading tout-heading--light">People say about us</h2>
       <div class="testimonials">
         <div class="testimonials__image">
           <img src="assets/image-5.jpeg" alt="">
         </div>
         <span class="arrow left"></span>
         <span class="arrow right"></span>
-        <p class="testimonials__blurb">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
+        <p class="tout-blurb tout-blurb--light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
         cinia aliquet, augue nisi scelerisque velit, vitae ornare lectus lorem nec odio. 
         Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+        <p class="tout-blurb tout-blurb--light tout-blurb--italic">Lewis</p>
       </div>
+    </div>
+  </section>
 
+  <section class="gallery">
+    <div class="gallery__item gallery__item--1">
+      <div class="gallery__item__content">
+        <h3 class="gallery__item__heading">Project #1</h3>   
+        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <div class="gallery__item gallery__item--2">
+      <div class="gallery__item__content">
+        <h3 class="gallery__item__heading">Project #1</h3>   
+        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <div class="gallery__item gallery__item--3">
+      <div class="gallery__item__content">
+        <h3 class="gallery__item__heading">Project #1</h3>   
+        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+    <div class="gallery__item gallery__item--4">
+      <div class="gallery__item__content">
+        <h3 class="gallery__item__heading">Project #1</h3>   
+        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+      </div>
+    </div>
+  </section>
+
+  <section class="tout tout--services">
+    <div class="wrapper">
+      <div class="tout-tile">
+        <h3 class="tout-tile__heading">Design</h3>
+        <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+        Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
+        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
+        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus
+        error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
+        et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
+        aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
+        dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
+        et dolore magnam aliquam quaerat voluptatem.</p>
+        <a href="#" class="button">More</a>
+      </div>
+      <div class="service-tile--image"></div>
+      <div class="service-tile"></div>
+      <div class="service-tile--image"></div>
     </div>
   </section>
 
