--- a/index.html
+++ b/index.html
@@ -168,22 +168,22 @@
 
   <section class="tout tout--services">
     <div class="wrapper">
-      <div class="tout-tile">
-        <h3 class="tout-tile__heading">Design</h3>
-        <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
-        Ut enim ad minim veniam, quis nostrud exercitation. ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute
-        irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat
-        non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Sed ut perspiciatis unde omnis iste natus
-        error sit voluptatem accusantium doloremque laudantium, totam rem aperiam, eaque ipsa quae ab illo inventore veritatis
-        et quasi architecto beatae vitae dicta sunt explicabo. Nemo enim ipsam voluptatem quia voluptas sit aspernatur aut odit
-        aut fugit, sed quia consequuntur magni dolores eos qui ratione voluptatem sequi nesciunt. Neque porro quisquam est, qui
-        dolorem ipsum quia dolor sit amet, consectetur, adipisci velit, sed quia non numquam eius modi tempora incidunt ut labore
-        et dolore magnam aliquam quaerat voluptatem.</p>
-        <a href="#" class="button">More</a>
+      <div class="tout-tile-row">
+        <div class="tout-tile">
+          <h3 class="tout-tile__heading">Design</h3>
+          <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+          <a href="#" class="button">More</a>
+        </div>
+        <div class="tout-tile--image"></div>
       </div>
-      <div class="service-tile--image"></div>
-      <div class="service-tile"></div>
-      <div class="service-tile--image"></div>
+      <div class="tout-tile-row">
+        <div class="tout-tile tout-tile--last">
+          <h3 class="tout-tile__heading">Analytics</h3>
+          <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+          <a href="#" class="button">More</a>
+        </div>
+        <div class="tout-tile--image"></div>
+      </div>
     </div>
   </section>
 
