styling for the footer

--- a/index.html
+++ b/index.html
@@ -213,8 +213,8 @@
   </section>
 
   <footer>
-    <div class="footer-area">
-      <div class="footer-area__heading">Contact</div>
+    <div class="footer-area spacer">
+      <h3 class="footer-area__heading">Contact</h3>
       <p class="footer-area__blurb">infohackeryou.com</p>
       <p class="footer-area__blurb">123-456-7890</p>
       <p class="footer-area__blurb">Toronto</p>
@@ -222,12 +222,14 @@
         <input type="email" class="footer-area__contact-form__email" placeholder="email address">
       </form>
     </div>
-    <div class="footer-area">
-      <div class="footer-area__heading">About Us</div>
+    <div class="footer-area footer-area--about spacer">
+      <h3 class="footer-area__heading">About Us</h3>
+      <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
     </div>
-    <div class="footer-area">
-      <div class="footer-area__heading">Instagram</div>
+    <div class="footer-area spacer">
+      <h3 class="footer-area__heading">Instagram</h3>
     </div>
+    <p class="footer-legal spacer">2018 All rights reserved (c)</p>
   </footer>
 
   
