--- a/index.html
+++ b/index.html
@@ -213,23 +213,35 @@
   </section>
 
   <footer>
-    <div class="footer-area spacer">
-      <h3 class="footer-area__heading">Contact</h3>
-      <p class="footer-area__blurb">infohackeryou.com</p>
-      <p class="footer-area__blurb">123-456-7890</p>
-      <p class="footer-area__blurb">Toronto</p>
-      <form action="" class="footer-area__contact-form">
-        <input type="email" class="footer-area__contact-form__email" placeholder="email address">
-      </form>
+    <div class="footer--top">
+      <div class="footer-area footer-area--contact spacer">
+        <h3 class="footer-area__heading">Contact</h3>
+        <p class="footer-area__blurb footer-area__blurb--email">infohackeryou.com</p>
+        <p class="footer-area__blurb footer-area__blurb--phone">123-456-7890</p>
+        <p class="footer-area__blurb footer-area__blurb--location">Toronto, Ontario</p>
+        <form action="" class="footer-area__contact-form">
+          <input type="email" class="footer-area__contact-form__email" placeholder="email address">
+        </form>
+      </div>
+      <div class="footer-area footer-area--about spacer">
+        <h3 class="footer-area__heading">About Us</h3>
+        <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+      </div>
+      <div class="footer-area spacer">
+        <h3 class="footer-area__heading">Instagram</h3>
+        <div class="footer-gallery">
+          <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-16.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-17.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-18.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-19.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-20.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-21.jpeg" alt=""></div>
+          <div class="footer-gallery__item"><img src="assets/image-22.jpeg" alt=""></div>
+        </div>
+      </div>
     </div>
-    <div class="footer-area footer-area--about spacer">
-      <h3 class="footer-area__heading">About Us</h3>
-      <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-    </div>
-    <div class="footer-area spacer">
-      <h3 class="footer-area__heading">Instagram</h3>
-    </div>
-    <p class="footer-legal spacer">2018 All rights reserved (c)</p>
+  <p class="footer-legal spacer">2018 All rights reserved &#x00a9;</p>
   </footer>
 
   
