--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="wrapper">
       <div class="tout-tile-row">
         <div class="tout-tile spacer">
-          <h3 class="tout-tile__heading">Design</h3>
+          <h3 class="tout-tile__heading tout-tile__heading--design">Design</h3>
           <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
           <a href="#" class="button">More</a>
         </div>
@@ -183,7 +183,7 @@
           <img src="assets/image-11.jpeg" alt="">
         </div>
         <div class="tout-tile tout-tile--last spacer">
-          <h3 class="tout-tile__heading">Analytics</h3>
+          <h3 class="tout-tile__heading tout-tile__heading--analytics">Analytics</h3>
           <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
           <a href="#" class="button">More</a>
         </div>
@@ -213,8 +213,8 @@
   </section>
 
   <footer>
-    <div class="footer--top">
-      <div class="footer-area footer-area--contact spacer">
+    <div class="footer--top spacer">
+      <div class="footer-area footer-area--contact">
         <h3 class="footer-area__heading">Contact</h3>
         <p class="footer-area__blurb footer-area__blurb--email">infohackeryou.com</p>
         <p class="footer-area__blurb footer-area__blurb--phone">123-456-7890</p>
@@ -223,11 +223,11 @@
           <input type="email" class="footer-area__contact-form__email" placeholder="email address">
         </form>
       </div>
-      <div class="footer-area footer-area--about spacer">
+      <div class="footer-area footer-area--about">
         <h3 class="footer-area__heading">About Us</h3>
         <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
       </div>
-      <div class="footer-area spacer">
+      <div class="footer-area">
         <h3 class="footer-area__heading">Instagram</h3>
         <div class="footer-gallery">
           <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
@@ -240,6 +240,16 @@
           <div class="footer-gallery__item"><img src="assets/image-22.jpeg" alt=""></div>
         </div>
       </div>
+    </div>
+    <div class="footer--bottom">
+      <h4 class="footer-logo">Corporate</h4>
+      <ul class="footer-nav">
+        <li class="footer-nav__items"><a href="#">Home</a></li>
+        <li class="footer-nav__items"><a href="#">Demos</a></li>
+        <li class="footer-nav__items"><a href="#">Blog</a></li>
+        <li class="footer-nav__items"><a href="#">Pages</a></li>
+        <li class="footer-nav__items"><a href="#">About Us</a></li>
+      </ul>
     </div>
   <p class="footer-legal spacer">2018 All rights reserved &#x00a9;</p>
   </footer>
