--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
   <section class="tout tout--about-us">
     <div class="half-tile">
-      <h2 class="tout-heading">Why Choose Us?</h2>
+      <h2 class="tout-heading tout-heading--left">Why Choose Us?</h2>
       <div class="half-tile__content">
         <div class="half-tile__content__image">
           <img src="assets/image-2.jpeg" alt="">
@@ -205,9 +205,27 @@
     <div class="wrapper">
       <h2 class="tout-heading">Our Team</h2>
       <div class="team-tiles">
-        <div class="team-tiles__image"><img src="assets/image-12.jpeg" alt=""></div>
-        <div class="team-tiles__image"><img src="assets/image-13.jpeg" alt=""></div>
-        <div class="team-tiles__image"><img src="assets/image-14.jpeg" alt=""></div>
+        <div class="team-tiles__image">
+          <img src="assets/image-12.jpeg" alt="">
+          <div class="team-tiles__info">
+            <p class="team-tiles__info__name">David Regan</p>
+            <p class="team-tiles__info__profession">Programmer</p>
+          </div>
+        </div>
+        <div class="team-tiles__image">
+          <img src="assets/image-13.jpeg" alt="">
+          <div class="team-tiles__info">
+            <p class="team-tiles__info__name">David Regan</p>
+            <p class="team-tiles__info__profession">Programmer</p>
+          </div>
+        </div>
+        <div class="team-tiles__image">
+          <img src="assets/image-14.jpeg" alt="">
+          <div class="team-tiles__info">
+            <p class="team-tiles__info__name">David Regan</p>
+            <p class="team-tiles__info__profession">Programmer</p>
+          </div>
+        </div>
       </div>
     </div>
   </section>
