--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
             <li class="nav--mobile__item"><a href="#">About Us</a></li>
           </ul>
         </div>
-        <!-- <ul class="nav">
-          <li class="nav__items"><a href="#">Home</a></li>
-          <li class="nav__items"><a href="#">Demo</a></li>
-          <li class="nav__items"><a href="#">Blog</a></li>
-          <li class="nav__items"><a href="#">Pages</a></li>
-          <li class="nav__items"><a href="#">About Us</a></li>
-        </ul>  -->
+        <ul class="nav--desktop">
+          <li class="nav--desktop__item"><a href="#">Home</a></li>
+          <li class="nav--desktop__item"><a href="#">Demo</a></li>
+          <li class="nav--desktop__item"><a href="#">Blog</a></li>
+          <li class="nav--desktop__item"><a href="#">Pages</a></li>
+          <li class="nav--desktop__item"><a href="#">About Us</a></li>
+        </ul> 
       </div>
     </nav>
     <div class="header__hero">
@@ -202,7 +202,7 @@
   </section>
 
   <section class="tout tout--team">
-    <div class="wrapper">
+    <div class="wrapper spacer">
       <h2 class="tout-heading">Our Team</h2>
       <div class="team-tiles">
         <div class="team-tiles__image">
@@ -231,45 +231,52 @@
   </section>
 
   <footer>
-    <div class="footer--top spacer">
-      <div class="footer-area footer-area--contact">
-        <h3 class="footer-area__heading">Contact</h3>
-        <p class="footer-area__blurb footer-area__blurb--email">infohackeryou.com</p>
-        <p class="footer-area__blurb footer-area__blurb--phone">123-456-7890</p>
-        <p class="footer-area__blurb footer-area__blurb--location">Toronto, Ontario</p>
-        <form action="" class="footer-area__contact-form">
-          <input type="email" class="footer-area__contact-form__email" placeholder="email address">
-        </form>
-      </div>
-      <div class="footer-area footer-area--about">
-        <h3 class="footer-area__heading">About Us</h3>
-        <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-      </div>
-      <div class="footer-area">
-        <h3 class="footer-area__heading">Instagram</h3>
-        <div class="footer-gallery">
-          <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-16.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-17.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-18.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-19.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-20.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-21.jpeg" alt=""></div>
-          <div class="footer-gallery__item"><img src="assets/image-22.jpeg" alt=""></div>
+    <div class="wrapper spacer">
+      <div class="footer--top">
+        <div class="footer-area footer-area--contact">
+          <h3 class="footer-area__heading">Contact</h3>
+          <p class="footer-area__blurb footer-area__blurb--email">infohackeryou.com</p>
+          <p class="footer-area__blurb footer-area__blurb--phone">123-456-7890</p>
+          <p class="footer-area__blurb footer-area__blurb--location">Toronto, Ontario</p>
+          <form action="" class="footer-area__contact-form">
+            <input type="email" class="footer-area__contact-form__email" placeholder="email address">
+          </form>
+        </div>
+        <div class="footer-area footer-area--about">
+          <h3 class="footer-area__heading">About Us</h3>
+          <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+        </div>
+        <div class="footer-area">
+          <h3 class="footer-area__heading">Instagram</h3>
+          <div class="footer-gallery">
+            <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-16.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-17.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-18.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-19.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-20.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-21.jpeg" alt=""></div>
+            <div class="footer-gallery__item"><img src="assets/image-22.jpeg" alt=""></div>
+          </div>
         </div>
       </div>
-    </div>
-    <div class="footer--bottom">
-      <h4 class="footer-logo">Corporate</h4>
-      <ul class="footer-nav">
-        <li class="footer-nav__items"><a href="#">Home</a></li>
-        <li class="footer-nav__items"><a href="#">Demos</a></li>
-        <li class="footer-nav__items"><a href="#">Blog</a></li>
-        <li class="footer-nav__items"><a href="#">Pages</a></li>
-        <li class="footer-nav__items"><a href="#">About Us</a></li>
+      <div class="footer--bottom">
+        <h4 class="footer-logo">Corporate</h4>
+        <ul class="footer-nav">
+          <li class="footer-nav__items"><a href="#">Home</a></li>
+          <li class="footer-nav__items"><a href="#">Demos</a></li>
+          <li class="footer-nav__items"><a href="#">Blog</a></li>
+          <li class="footer-nav__items"><a href="#">Pages</a></li>
+          <li class="footer-nav__items"><a href="#">About Us</a></li>
+        </ul>
+      </div>
+      <ul class="footer-share">
+        <li class="footer-share__icons"><a href="#"><img src="assets/facebook-square-brands.svg" alt=""></a></li>
+        <li class="footer-share__icons"><a href="#"><img src="assets/instagram-brands.svg" alt=""></a></li>
+        <li class="footer-share__icons"><a href="#"><img src="assets/pinterest-p-brands.svg" alt=""></a></li>
       </ul>
+      <p class="footer-legal spacer">2018 All rights reserved &#x00a9;</p>
     </div>
-  <p class="footer-legal spacer">2018 All rights reserved &#x00a9;</p>
   </footer>
 
   
