--- a/index.html
+++ b/index.html
@@ -239,14 +239,17 @@
           <p class="footer-area__blurb footer-area__blurb--phone">123-456-7890</p>
           <p class="footer-area__blurb footer-area__blurb--location">Toronto, Ontario</p>
           <form action="" class="footer-area__contact-form">
-            <input type="email" class="footer-area__contact-form__email" placeholder="email address">
+            <div class="footer-area__contact-form__input-wrapper">
+              <input type="email" class="footer-area__contact-form__email" placeholder="email address">
+              <input type="submit" class="footer-area__contact-form__submit" value="&#xf1d8">
+            </div>
           </form>
         </div>
         <div class="footer-area footer-area--about">
           <h3 class="footer-area__heading">About Us</h3>
           <p class="footer-area__blurb">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         </div>
-        <div class="footer-area">
+        <div class="footer-area footer-area--gallery">
           <h3 class="footer-area__heading">Instagram</h3>
           <div class="footer-gallery">
             <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
@@ -271,9 +274,21 @@
         </ul>
       </div>
       <ul class="footer-share">
-        <li class="footer-share__icons"><a href="#"><img src="assets/facebook-square-brands.svg" alt=""></a></li>
-        <li class="footer-share__icons"><a href="#"><img src="assets/instagram-brands.svg" alt=""></a></li>
-        <li class="footer-share__icons"><a href="#"><img src="assets/pinterest-p-brands.svg" alt=""></a></li>
+        <li class="footer-share__icons">
+          <a href="#">
+            <img src="assets/facebook-square-brands.svg" alt="">
+          </a>
+        </li>
+        <li class="footer-share__icons">
+          <a href="#">
+            <img src="assets/instagram-brands.svg" alt="">
+          </a>
+        </li>
+        <li class="footer-share__icons">
+          <a href="#">
+            <img src="assets/pinterest-p-brands.svg" alt="">
+          </a>
+        </li>
       </ul>
       <p class="footer-legal spacer">2018 All rights reserved &#x00a9;</p>
     </div>
