updates to styling/layout

--- a/index.html
+++ b/index.html
@@ -127,10 +127,10 @@
       <h2 class="tout-heading tout-heading--light">People say about us</h2>
       <div class="testimonials">
         <div class="testimonials__image">
+          <span class="testimonials__arrow testimonials__arrow--left"></span>
+          <span class="testimonials__arrow testimonials__arrow--right"></span>
           <img src="assets/image-5.jpeg" alt="">
         </div>
-        <span class="arrow left"></span>
-        <span class="arrow right"></span>
         <p class="tout-blurb tout-blurb--light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
         cinia aliquet, augue nisi scelerisque velit, vitae ornare lectus lorem nec odio. 
         Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
