--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
       <h2 class="tout-heading tout-heading--light">People say about us</h2>
       <div class="testimonials">
         <div class="testimonials__image">
-          <span class="testimonials__arrow testimonials__arrow--left"></span>
-          <span class="testimonials__arrow testimonials__arrow--right"></span>
+          <span aria-label="previous testimonial" class="testimonials__arrow testimonials__arrow--left"></span>
+          <span aria-label="next testimonial" class="testimonials__arrow testimonials__arrow--right"></span>
           <img src="assets/image-5.jpeg" alt="">
         </div>
         <p class="tout-blurb tout-blurb--light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
@@ -206,21 +206,21 @@
       <h2 class="tout-heading">Our Team</h2>
       <div class="team-tiles">
         <div class="team-tiles__image">
-          <img src="assets/image-12.jpeg" alt="">
+          <img src="assets/image-12.jpeg" alt="Photo of David Regan, Programmer">
           <div class="team-tiles__info">
             <p class="team-tiles__info__name">David Regan</p>
             <p class="team-tiles__info__profession">Programmer</p>
           </div>
         </div>
         <div class="team-tiles__image">
-          <img src="assets/image-13.jpeg" alt="">
+          <img src="assets/image-13.jpeg" alt="Photo of David Regan, Programmer"">
           <div class="team-tiles__info">
             <p class="team-tiles__info__name">David Regan</p>
             <p class="team-tiles__info__profession">Programmer</p>
           </div>
         </div>
         <div class="team-tiles__image">
-          <img src="assets/image-14.jpeg" alt="">
+          <img src="assets/image-14.jpeg" alt="Photo of David Regan, Programmer">
           <div class="team-tiles__info">
             <p class="team-tiles__info__name">David Regan</p>
             <p class="team-tiles__info__profession">Programmer</p>
@@ -252,14 +252,14 @@
         <div class="footer-area footer-area--gallery">
           <h3 class="footer-area__heading">Instagram</h3>
           <div class="footer-gallery">
-            <div class="footer-gallery__item"><img src="assets/image-15.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-16.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-17.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-18.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-19.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-20.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-21.jpeg" alt=""></div>
-            <div class="footer-gallery__item"><img src="assets/image-22.jpeg" alt=""></div>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-15.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-16.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-17.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-18.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-19.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-20.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-21.jpeg" alt="Corporate Instagram Post"></a>
+            <a href="#" class="footer-gallery__item"><img src="assets/image-22.jpeg" alt="Corporate Instagram Post"></a>
           </div>
         </div>
       </div>
@@ -276,17 +276,17 @@
       <ul class="footer-share">
         <li class="footer-share__icons">
           <a href="#">
-            <img src="assets/facebook-square-brands.svg" alt="">
+            <img src="assets/facebook-square-brands.svg" alt="Facebook Page">
           </a>
         </li>
         <li class="footer-share__icons">
           <a href="#">
-            <img src="assets/instagram-brands.svg" alt="">
+            <img src="assets/instagram-brands.svg" alt="Instagram Page">
           </a>
         </li>
         <li class="footer-share__icons">
           <a href="#">
-            <img src="assets/pinterest-p-brands.svg" alt="">
+            <img src="assets/pinterest-p-brands.svg" alt="Pinterest Page">
           </a>
         </li>
       </ul>
