gh-pages lesson push

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
           </div>
         </div>
         <div class="team-tiles__image">
-          <img src="assets/image-13.jpeg" alt="Photo of David Regan, Programmer"">
+          <img src="assets/image-13.jpeg" alt="Photo of David Regan, Programmer">
           <div class="team-tiles__info">
             <p class="team-tiles__info__name">David Regan</p>
             <p class="team-tiles__info__profession">Programmer</p>
