--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
     <div class="wrapper spacer">
       <h2 class="tout-heading">Ask a Question</h2>
       <form action="POST" class="contact__form">
-        <input type="text" placeholder="Your Message" class="contact__form__input--text">
+        <input type="text" placeholder="Your message" class="contact__form__input--text" name="contact-message" id="contact-message">
         <input type="submit" class="button button--black button--borderless" name="contact-form-submit" id="contact-form-submit" value="Send">
       </form>
     </div>
