--- a/index.html
+++ b/index.html
@@ -45,190 +45,194 @@
     </div>
   </header>
 
-  <section class="tout tout--learn-more">
-    <div class="wrapper spacer">
-      <h2 class="tout-heading">Welcome to <span class="tout-heading--blue">Corporate</span></h2>
-      <p class="tout-blurb">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum consequatur ab vel a iure quae quibusdam modi expedita reiciendis accusantium?</p>
-      <a href="#" class="button">Know more</a>
-    </div>
-  </section>
+  <main>
+    
+    <section class="tout tout--learn-more">
+      <div class="wrapper spacer">
+        <h2 class="tout-heading">Welcome to <span class="tout-heading--blue">Corporate</span></h2>
+        <p class="tout-blurb">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Eum consequatur ab vel a iure quae quibusdam modi expedita reiciendis accusantium?</p>
+        <a href="#" class="button">Know more</a>
+      </div>
+    </section>
 
-  <section class="tout tout--about-us">
-    <div class="half-tile">
-      <h2 class="tout-heading tout-heading--left">Why Choose Us?</h2>
-      <div class="half-tile__content">
-        <div class="half-tile__content__image">
-          <img src="assets/image-2.jpeg" alt="">
+    <section class="tout tout--about-us">
+      <div class="half-tile">
+        <h2 class="tout-heading tout-heading--left">Why Choose Us?</h2>
+        <div class="half-tile__content">
+          <div class="half-tile__content__image">
+            <img src="assets/image-2.jpeg" alt="">
+          </div>
+          <div class="half-tile__content__text">
+            <h3 class="tout-heading--small">15 Years of experience</h3>
+            <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
+          </div>
         </div>
-        <div class="half-tile__content__text">
-          <h3 class="tout-heading--small">15 Years of experience</h3>
-          <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
+        <div class="half-tile__content">
+          <div class="half-tile__content__image">
+            <img src="assets/image-3.jpeg" alt="">
+          </div>
+          <div class="half-tile__content__text">
+            <h3 class="tout-heading--small">900+ Happy clients</h3>
+            <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
+          </div>
         </div>
       </div>
-      <div class="half-tile__content">
-        <div class="half-tile__content__image">
-          <img src="assets/image-3.jpeg" alt="">
-        </div>
-        <div class="half-tile__content__text">
-          <h3 class="tout-heading--small">900+ Happy clients</h3>
-          <p class="tout-blurb--small">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Reiciendis omnis ducimus eos quas vitae facere quibusdam ea atque?</p>
-        </div>
-      </div>
-    </div>
-    <div class="half-tile--decorative"></div>
-  </section>
+      <div class="half-tile--decorative"></div>
+    </section>
 
-  <section class="tout tout--services">
-    <div class="wrapper spacer">
-      <h2 class="tout-heading">Services</h2>
-      <div class="features">
-        <div class="features__tile">
-          <div class="features__tile__image">
-            <img src="assets/object-group-solid.svg" alt="">
-          </div>
-          <h3 class="features__tile__heading">UX/UI Design</h3>
-          <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
-          <ul class="features__tile__list">
-            <li class="tout-blurb">Lorem, ipsum.</li>
-            <li class="tout-blurb">Lorem, ipsum dolor.</li>
-            <li class="tout-blurb">Lorem, ipsum.</li>
-          </ul>
-        </div>
-        <div class="features__tile">
-          <div class="features__tile__image">
-            <img src="assets/laptop-solid.svg" alt="">
-          </div>
-            <h3 class="features__tile__heading">Programming</h3>
+    <section class="tout tout--services">
+      <div class="wrapper spacer">
+        <h2 class="tout-heading">Services</h2>
+        <div class="features">
+          <div class="features__tile">
+            <div class="features__tile__image">
+              <img src="assets/object-group-solid.svg" alt="">
+            </div>
+            <h3 class="features__tile__heading">UX/UI Design</h3>
             <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
-          <ul class="features__tile__list">
-            <li class="tout-blurb">Lorem, ipsum.</li>
-            <li class="tout-blurb">Lorem, ipsum dolor.</li>
-            <li class="tout-blurb">Lorem, ipsum.</li>
-          </ul>
-        </div>
-        <div class="features__tile">
-          <div class="features__tile__image">
-            <img src="assets/chart-line-solid.svg" alt="">
+            <ul class="features__tile__list">
+              <li class="tout-blurb">Lorem, ipsum.</li>
+              <li class="tout-blurb">Lorem, ipsum dolor.</li>
+              <li class="tout-blurb">Lorem, ipsum.</li>
+            </ul>
           </div>
-          <h3 class="features__tile__heading">Analytics</h3>
-          <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
-          <ul class="features__tile__list">
-            <li class="tout-blurb">Lorem, ipsum.</li>
-            <li class="tout-blurb">Lorem, ipsum dolor.</li>
-            <li class="tout-blurb">Lorem, ipsum.</li>
-          </ul>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="tout tout--testimonials">
-    <div class="wrapper spacer">
-      <h2 class="tout-heading tout-heading--light">People say about us</h2>
-      <div class="testimonials">
-        <div class="testimonials__image">
-          <span aria-label="previous testimonial" class="testimonials__arrow testimonials__arrow--left"></span>
-          <span aria-label="next testimonial" class="testimonials__arrow testimonials__arrow--right"></span>
-          <img src="assets/image-5.jpeg" alt="">
-        </div>
-        <p class="tout-blurb tout-blurb--light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
-        cinia aliquet, augue nisi scelerisque velit, vitae ornare lectus lorem nec odio. 
-        Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
-        <p class="tout-blurb tout-blurb--light tout-blurb--italic">Lewis</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="gallery">
-    <div class="gallery__item gallery__item--1">
-      <div class="gallery__item__content">
-        <h3 class="gallery__item__heading">Project #1</h3>   
-        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <div class="gallery__item gallery__item--2">
-      <div class="gallery__item__content">
-        <h3 class="gallery__item__heading">Project #2</h3>   
-        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <div class="gallery__item gallery__item--3">
-      <div class="gallery__item__content">
-        <h3 class="gallery__item__heading">Project #3</h3>   
-        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <div class="gallery__item gallery__item--4">
-      <div class="gallery__item__content">
-        <h3 class="gallery__item__heading">Project #4</h3>   
-        <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-  </section>
-
-  <section class="tout tout--services">
-    <div class="wrapper">
-      <div class="tout-tile-row">
-        <div class="tout-tile spacer">
-          <h3 class="tout-tile__heading tout-tile__heading--design">Design</h3>
-          <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-          <a href="#" class="button">More</a>
-        </div>
-        <div class="tout-tile--image">
-          <img src="assets/image-10.jpeg" alt="">
-        </div>
-      </div>
-      <div class="tout-tile-row">
-        <div class="tout-tile--image">
-          <img src="assets/image-11.jpeg" alt="">
-        </div>
-        <div class="tout-tile tout-tile--last spacer">
-          <h3 class="tout-tile__heading tout-tile__heading--analytics">Analytics</h3>
-          <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
-          <a href="#" class="button">More</a>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section class="tout tout--contact">
-    <div class="wrapper spacer">
-      <h2 class="tout-heading">Ask a Question</h2>
-      <form action="POST" class="contact__form">
-        <input type="text" placeholder="Your message" class="contact__form__input--text" name="contact-message" id="contact-message">
-        <input type="submit" class="button button--black button--borderless" name="contact-form-submit" id="contact-form-submit" value="Send">
-      </form>
-    </div>
-  </section>
-
-  <section class="tout tout--team">
-    <div class="wrapper spacer">
-      <h2 class="tout-heading">Our Team</h2>
-      <div class="team-tiles">
-        <div class="team-tiles__image">
-          <img src="assets/image-12.jpeg" alt="Photo of David Regan, Programmer">
-          <div class="team-tiles__info">
-            <p class="team-tiles__info__name">David Regan</p>
-            <p class="team-tiles__info__profession">Programmer</p>
+          <div class="features__tile">
+            <div class="features__tile__image">
+              <img src="assets/laptop-solid.svg" alt="">
+            </div>
+              <h3 class="features__tile__heading">Programming</h3>
+              <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
+            <ul class="features__tile__list">
+              <li class="tout-blurb">Lorem, ipsum.</li>
+              <li class="tout-blurb">Lorem, ipsum dolor.</li>
+              <li class="tout-blurb">Lorem, ipsum.</li>
+            </ul>
           </div>
-        </div>
-        <div class="team-tiles__image">
-          <img src="assets/image-13.jpeg" alt="Photo of David Regan, Programmer">
-          <div class="team-tiles__info">
-            <p class="team-tiles__info__name">David Regan</p>
-            <p class="team-tiles__info__profession">Programmer</p>
-          </div>
-        </div>
-        <div class="team-tiles__image">
-          <img src="assets/image-14.jpeg" alt="Photo of David Regan, Programmer">
-          <div class="team-tiles__info">
-            <p class="team-tiles__info__name">David Regan</p>
-            <p class="team-tiles__info__profession">Programmer</p>
+          <div class="features__tile">
+            <div class="features__tile__image">
+              <img src="assets/chart-line-solid.svg" alt="">
+            </div>
+            <h3 class="features__tile__heading">Analytics</h3>
+            <p class="tout-blurb">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Nam!</p>
+            <ul class="features__tile__list">
+              <li class="tout-blurb">Lorem, ipsum.</li>
+              <li class="tout-blurb">Lorem, ipsum dolor.</li>
+              <li class="tout-blurb">Lorem, ipsum.</li>
+            </ul>
           </div>
         </div>
       </div>
-    </div>
-  </section>
+    </section>
+
+    <section class="tout tout--testimonials">
+      <div class="wrapper spacer">
+        <h2 class="tout-heading tout-heading--light">People say about us</h2>
+        <div class="testimonials">
+          <div class="testimonials__image">
+            <span aria-label="previous testimonial" class="testimonials__arrow testimonials__arrow--left"></span>
+            <span aria-label="next testimonial" class="testimonials__arrow testimonials__arrow--right"></span>
+            <img src="assets/image-5.jpeg" alt="">
+          </div>
+          <p class="tout-blurb tout-blurb--light">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin ultricies, leo gravida la
+          cinia aliquet, augue nisi scelerisque velit, vitae ornare lectus lorem nec odio. 
+          Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+          <p class="tout-blurb tout-blurb--light tout-blurb--italic">Lewis</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="gallery">
+      <div class="gallery__item gallery__item--1">
+        <div class="gallery__item__content">
+          <h3 class="gallery__item__heading">Project #1</h3>   
+          <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="gallery__item gallery__item--2">
+        <div class="gallery__item__content">
+          <h3 class="gallery__item__heading">Project #2</h3>   
+          <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="gallery__item gallery__item--3">
+        <div class="gallery__item__content">
+          <h3 class="gallery__item__heading">Project #3</h3>   
+          <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+      <div class="gallery__item gallery__item--4">
+        <div class="gallery__item__content">
+          <h3 class="gallery__item__heading">Project #4</h3>   
+          <p class="gallery__item__blurb tout-blurb--small">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="tout tout--services">
+      <div class="wrapper">
+        <div class="tout-tile-row">
+          <div class="tout-tile spacer">
+            <h3 class="tout-tile__heading tout-tile__heading--design">Design</h3>
+            <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+            <a href="#" class="button">More</a>
+          </div>
+          <div class="tout-tile--image">
+            <img src="assets/image-10.jpeg" alt="">
+          </div>
+        </div>
+        <div class="tout-tile-row">
+          <div class="tout-tile--image">
+            <img src="assets/image-11.jpeg" alt="">
+          </div>
+          <div class="tout-tile tout-tile--last spacer">
+            <h3 class="tout-tile__heading tout-tile__heading--analytics">Analytics</h3>
+            <p class="tout-blurb--small">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation</p>
+            <a href="#" class="button">More</a>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section class="tout tout--contact">
+      <div class="wrapper spacer">
+        <h2 class="tout-heading">Ask a Question</h2>
+        <form action="POST" class="contact__form">
+          <input type="text" placeholder="Your message" class="contact__form__input--text" name="contact-message" id="contact-message">
+          <input type="submit" class="button button--black button--borderless" name="contact-form-submit" id="contact-form-submit" value="Send">
+        </form>
+      </div>
+    </section>
+
+    <section class="tout tout--team">
+      <div class="wrapper spacer">
+        <h2 class="tout-heading">Our Team</h2>
+        <div class="team-tiles">
+          <div class="team-tiles__image">
+            <img src="assets/image-12.jpeg" alt="Photo of David Regan, Programmer">
+            <div class="team-tiles__info">
+              <p class="team-tiles__info__name">David Regan</p>
+              <p class="team-tiles__info__profession">Programmer</p>
+            </div>
+          </div>
+          <div class="team-tiles__image">
+            <img src="assets/image-13.jpeg" alt="Photo of David Regan, Programmer">
+            <div class="team-tiles__info">
+              <p class="team-tiles__info__name">David Regan</p>
+              <p class="team-tiles__info__profession">Programmer</p>
+            </div>
+          </div>
+          <div class="team-tiles__image">
+            <img src="assets/image-14.jpeg" alt="Photo of David Regan, Programmer">
+            <div class="team-tiles__info">
+              <p class="team-tiles__info__name">David Regan</p>
+              <p class="team-tiles__info__profession">Programmer</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+  </main>
 
   <footer>
     <div class="wrapper spacer">
